--- a/elottery-web/package.json
+++ b/elottery-web/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.901.0",
     "@prisma/client": "6.16.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
