--- a/elottery-web/package.json
+++ b/elottery-web/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.901.0",
-    "@prisma/client": "6.16.3",
+    "@prisma/client": "^6.16.3",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -26,7 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.16.3",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
