--- a/elottery-web/package.json
+++ b/elottery-web/package.json
@@ -9,16 +9,21 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.901.0",
+    "@aws-sdk/client-s3": "^3.929.0",
     "@aws-sdk/client-sns": "^3.927.0",
+    "@aws-sdk/s3-request-presigner": "^3.929.0",
     "@prisma/client": "6.16.3",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "next": "^16.0.1",
     "next-auth": "^4.24.13",
+    "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
@@ -26,6 +31,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.17.3",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "prisma": "^6.16.3",
