--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ applications:
           commands:
             - npm install -g pnpm
             - pnpm install --frozen-lockfile
+            - pnpm prisma generate 
         build:
           commands:
             - pnpm build
