--- a/elottery-web/package.json
+++ b/elottery-web/package.json
@@ -12,7 +12,7 @@
     "@aws-sdk/client-s3": "^3.929.0",
     "@aws-sdk/client-sns": "^3.927.0",
     "@aws-sdk/s3-request-presigner": "^3.929.0",
-    "@prisma/client": "6.16.3",
+    "@prisma/client": "6.19.0",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -36,7 +36,7 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "prisma": "^6.16.3",
+    "prisma": "6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
