--- a/amplify.yml
+++ b/amplify.yml
@@ -1,12 +1,12 @@
 version: 1
 applications:
-  - appRoot: elottery-web 
+  - appRoot: elottery-web
     frontend:
       phases:
         preBuild:
           commands:
             - npm install -g pnpm
-            - pnpm install --frozen-lockfile
+            - pnpm install
             - pnpm prisma generate 
         build:
           commands:
@@ -18,4 +18,3 @@ applications:
       cache:
         paths:
           - node_modules/**/*
-          - .pnpm-store/**/*
